--- a/app/src/main/res/layout/activity_clientes.xml
+++ b/app/src/main/res/layout/activity_clientes.xml
@@ -9,6 +9,7 @@
     android:layout_width="match_parent"
     android:fillViewport="true"
     >
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -37,7 +38,6 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
         </LinearLayout>
-
 
 
         <com.google.android.material.textfield.TextInputLayout
@@ -120,23 +120,23 @@
 
         <LinearLayout
             android:id="@+id/layout_princ"
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
+            android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputLayout7"
                 android:layout_width="0dp"
                 android:layout_height="52dp"
-                android:layout_weight="1"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp">
+                android:layout_marginRight="8dp"
+                android:layout_weight="1">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -149,10 +149,10 @@
                 android:id="@+id/textInputLayout9"
                 android:layout_width="0dp"
                 android:layout_height="52dp"
-                android:layout_weight="2"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp">
+                android:layout_marginRight="16dp"
+                android:layout_weight="2">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -163,23 +163,23 @@
 
         <LinearLayout
             android:id="@+id/layout_princ_2"
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
+            android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/layout_princ">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputLayout8"
                 android:layout_width="0dp"
                 android:layout_height="54dp"
-                android:layout_weight="2"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp">
+                android:layout_marginRight="8dp"
+                android:layout_weight="2">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -191,10 +191,10 @@
                 android:id="@+id/textInputLayout10"
                 android:layout_width="0dp"
                 android:layout_height="52dp"
-                android:layout_weight="2"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp">
+                android:layout_marginRight="16dp"
+                android:layout_weight="2">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -246,8 +246,22 @@
 
         <Button
             android:id="@+id/buttonCadastrarReceita"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="149dp"
+            android:layout_height="43dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginBottom="24dp"
+            android:background="@color/colorPrimaryDarkCliente"
+            android:onClick="inserirReceita"
+            android:text="Inserir receita"
+            android:textColor="@android:color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <Button
+            android:id="@+id/historicoReceita"
+            android:layout_width="149dp"
+            android:layout_height="43dp"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginEnd="16dp"
@@ -255,11 +269,10 @@
             android:layout_marginBottom="24dp"
             android:background="@color/colorPrimaryDarkCliente"
             android:onClick="inserirReceita"
-            android:text="Inserir receita"
+            android:text="Histórico receita"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintEnd_toStartOf="@+id/buttonCadastrarReceita"
             app:layout_constraintStart_toStartOf="parent" />
 
         <CheckBox
@@ -268,16 +281,15 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="65dp"
             android:layout_marginLeft="65dp"
-            android:layout_marginEnd="165dp"
-            android:layout_marginRight="165dp"
+            android:layout_marginEnd="65dp"
+            android:layout_marginRight="65dp"
+            android:layout_marginBottom="16dp"
             android:text="Indicação para consulta"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/buttonCadastrarReceita"
+            app:layout_constraintBottom_toTopOf="@+id/historicoReceita"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout14"
-            app:layout_constraintVertical_bias="0.512" />
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout14" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
