--- a/app/src/main/res/layout/activity_insere_receita.xml
+++ b/app/src/main/res/layout/activity_insere_receita.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InsereReceitaActivity">
+    tools:context=".activity.InsereReceitaActivity">
 
     <TextView
         android:id="@+id/textView16"
